loopfor.LoopCourse.scala.error
Erreur de compilation :
LoopCourse:5: error: ';' expected but '#' found.
#for (x<- 0 to 9){
^